@@ -5,6 +5,8 @@ CHANGES IN CUPS V1.1.15
 
 	- Updated the CUPS license agreement for the new MacOS
 	  license exception.
+	- The pdftops filter did not support shading type 3
+	  (radial fill) for the "sh" operator.
 	- The cups-polld program now throttles the local
 	  broadcasts of polled printers and classes so that the
 	  local system is not overwhelmed with hundreds of
